@@ -7,6 +7,5 @@ DIST 389-ds-base-1.2.5.tar.bz2 2791116 RMD160 7bc4af77a66f19f1ee5ea2dfe6678e0d4b
 DIST 389-ds-base-1.2.6.rc2.tar.bz2 2867753 RMD160 4f0daa5c47b91d46006dff3811749b83b795dca3 SHA1 7a9c8e577dcec1e0d485b08f9ccbe18d26e4f430 SHA256 d9fd7d84c9cc9565bcf8837dd437519aad846231827e8c4a1053a6fb0d5675ff
 EBUILD 389-ds-base-1.2.5.ebuild 2918 RMD160 c855002d65617c5a24d9721382ddb0ae64bc284e SHA1 0b2fd59fd9c3f86e512977df9f67a1884a48df47 SHA256 539f66d017f7f026b513270a99617e3282154f0b2cf09c1520404737e52def46
 EBUILD 389-ds-base-1.2.6_rc2-r1.ebuild 4352 RMD160 1ec51366d76b07d97c178517971f51d96e969f6e SHA1 64c493a3fb14a80d774f3587ddb5d8e2e06d4da7 SHA256 8f297bca0a654c0944dd981c7a6fc99843bda27087705ce1f2d48c58e60f39df
-EBUILD 389-ds-base-1.2.6_rc2.ebuild 3953 RMD160 a2264c7288dcd9dc107478412c19521cffc99e0d SHA1 6c47a6d7a1534591264ebd65092a92e623f7eafe SHA256 be57aeb6abb0791bd2407956f12e051e7bdc99a41dab1d675fc9a1bd6f60f228
-MISC ChangeLog 4608 RMD160 4e34c17e3ed6ac9b2dd712f2fc82eb2c0b017d7e SHA1 59311952e6b61d39916db343cfc75590690b793b SHA256 f6484b812d7996c6f20e08e15b7bd0f208ede222d4ce501fdbcce06ebc5853a0
+MISC ChangeLog 4696 RMD160 713edb2c3267db3d97e9fecb3675017418f89532 SHA1 74d5c38e4fa024ebb9039ca71d2ccb0aed6dca6b SHA256 ae6e83bb122276ca191e24ff417304d1157088b1e16a98eb24bd12cde6f49f74
 MISC metadata.xml 1184 RMD160 2a20686dd0bf46fc91567041430659699a24ab27 SHA1 a0f1e8fadfc1f0e91deab05fd4f9efba3a33e398 SHA256 222f5d5797a314c2f691dfb298d19ff85cfa61752db31a3204f84e345ab8b1f5
