@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Jul 2010; <slep@gentoo.org> -389-ds-base-1.2.6_rc2.ebuild:
+  delete broken ebuild
+
   04 Jul 2010; <slep@gentoo.org> files/dirsrv-snmp.initd:
   very stub chanches in dirsvr-snmp.init file
 
